--- a/create-vm-k3s.yml
+++ b/create-vm-k3s.yml
@@ -78,6 +78,7 @@
       command:    undefine
       name:       "{{ vmName }}"
     when: vmName in vms.list_vms
+    ignore_errors: true
 
   - name: Define and build VM
     shell: |
