--- a/create-vm-foreman2.yml
+++ b/create-vm-foreman2.yml
@@ -35,6 +35,7 @@
     vcKeymap:      gb
     xLayouts:      gb
     lang:          en_GB.UTF-8
+    timeZone:      Europe/Amsterdam
     netDevice:     eth0
     netIp:         192.168.0.49
     netMask:       255.255.255.0
@@ -57,11 +58,79 @@
     - kerberos
     - mountd
     - nfs
+
     fwPort:
     - 22:tcp
     - 80:tcp
     - 443:tcp
     - 3306:tcp
+
+    logVol:
+    - mountPoint: /
+      fsType: xfs
+      lvName: lv_root
+      lvSize: 1024
+      fsOptions: none
+
+    - mountPoint: none
+      fsType: swap
+      lvName: lv_swap
+      lvSize: 2048
+      fsOptions: none
+
+    - mountPoint: /home
+      fsType: xfs
+      lvName: lv_home
+      lvSize: 1024
+      fsOptions: "defaults,nodev,nosuid"
+
+    - mountPoint: /opt
+      fsType: xfs
+      lvName: lv_opt
+      lvSize: 2048
+      fsOptions: "defaults,nodev"
+
+    - mountPoint: /tmp
+      fsType: xfs
+      lvName: lv_tmp
+      lvSize: 1024
+      fsOptions: "defaults,nodev,nosuid,noexec"
+
+    - mountPoint: /usr
+      fsType: xfs
+      lvName: lv_usr
+      lvSize: 8192
+      fsOptions: "defaults,nodev"
+
+    - mountPoint: /var
+      fsType: xfs
+      lvName: lv_var
+      lvSize: 204800
+      fsOptions: "defaults,nodev"
+
+    - mountPoint: /var/tmp
+      fsType: xfs
+      lvName: lv_var_tmp
+      lvSize: 1024
+      fsOptions: "defaults,nodev,nosuid,noexec"
+
+    - mountPoint: /var/log
+      fsType: xfs
+      lvName: lv_var_log
+      lvSize: 4096
+      fsOptions: "defaults,nodev,nosuid,noexec"
+
+    - mountPoint: /var/log/audit
+      fsType: xfs
+      lvName: lv_audit
+      lvSize: 1024
+      fsOptions: "defaults,nodev,nosuid,noexec"
+
+    - mountPoint: /vms
+      fsType: xfs
+      lvName: lv_vms
+      lvSize: 8192
+      fsOptions: "defaults,nodev"
 
   tasks:
 
